--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -3,7 +3,7 @@ name: Build and Release APK
 on:
   push:
     branches:
-      - main  # Runs on every push to the main branch
+      - master  # Runs on every push to the main branch
 
 jobs:
   build:
