--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "stable"
+          channel: stable
 
       - name: Install dependencies
         run: flutter pub get
@@ -24,7 +24,7 @@ jobs:
       - name: Build APK
         run: flutter build apk --release
 
-      - name: Upload APK to Artifacts
+      - name: Upload APK as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release-apk
