--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -3,7 +3,7 @@ name: Build and Release APK
 on:
   push:
     branches:
-      - master  # Runs on every push to the main branch
+      - main  # Runs on every push to the main branch
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: stable
+          flutter-version: "3.7.12"  # Use an older version that supports your current project
 
       - name: Install dependencies
         run: flutter pub get
