Adding saleh/test-rebase to watching branches
Signed-off-by: Moh. Saleh Gholami <isalehgholami@gmail.com>

--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -3,7 +3,8 @@ name: Build and Release APK
 on:
   push:
     branches:
-      - master  # Runs on every push to the main branch
+      - master
+      - saleh/test-rebase
 
 jobs:
   build:
