--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.7.12"  # Use an older version that supports your current project
+          channel: stable
 
       - name: Install dependencies
         run: flutter pub get
