Adding auto releaser to the workflow file
Signed-off-by: Moh. Saleh Gholami <isalehgholami@gmail.com>

--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      apk_path: build/app/outputs/flutter-apk/app-release.apk
 
     steps:
       - name: Checkout repository
@@ -31,3 +33,23 @@ jobs:
         with:
           name: app-release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download APK Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-release-apk
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: softprops/action-gh-release@v2
+        with:
+          # Optionally, you can set a tag name or release name here.
+          # The release is created against the commit that triggered the workflow.
+          files: app-release-apk/app-release.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
