--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -10,8 +10,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      apk_path: build/app/outputs/flutter-apk/app-release.apk
 
     steps:
       - name: Checkout repository
@@ -37,19 +35,33 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Ensure full history to create and push tags
+
       - name: Download APK Artifact
         uses: actions/download-artifact@v4
         with:
           name: app-release-apk
 
+      - name: Create Tag
+        id: create_tag
+        run: |
+          TAG="release-${GITHUB_RUN_NUMBER}"
+          echo "TAG=$TAG" >> $GITHUB_ENV
+          # Configure Git so we can push the tag
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git tag "$TAG"
+          git push origin "$TAG"
+
       - name: Create GitHub Release
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
-          # Optionally, you can set a tag name or release name here.
-          # The release is created against the commit that triggered the workflow.
+          tag: ${{ env.TAG }}
           files: app-release-apk/app-release.apk
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
